tests/syntax/bad/testfile-lexing-3.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void m() { int i = 1/**/0; }
